--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,27 +1,42 @@
 {% extends 'index.html' %}
-{% load crispy_forms_tags %}
 
-{% block title %}Registre-se para usar o To Do{% endblock %}
 
 {% block content %}
-<div >
-    <div >
-        <div>
-            <div >
-                <h4 >Registre-se para usar o To Do</h4>
-        
-                <form method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="next" value="{{ next }}">
-        
-                    {{ form|crispy }}
-
-                    <button type="submit" >Registrar</button>
-                </form>
-
-                <p >Já possui uma conta? <a href="/accounts/login">Clique aqui!</a></p>
-            </div>
-        </div>
+<br>
+<h4>My Profile</h4>
+    <table class="table table-light table-bordered table-striped">
+        <tbody>
+            <tr>
+                <th>First Name</th>
+                <td>{{object.user.first_name}}</td>
+            </tr>
+            <tr>
+                <th>Last Name</th>
+                <td>{{object.user.last_name}}</td>
+            </tr>
+            <tr>
+                <th>Email Id</th>
+                <td>{{object.user.email}}</td>
+            </tr>
+            <tr>
+                <th>Salary</th>
+                <td>{{object.salary}}</td>
+            </tr>
+            <tr>
+                <th>Designation</th>
+                <td>{{object.designation}}</td>
+            </tr>
+            <tr>
+                <th>Profile Picture</th>
+                <td>
+                    {% if object.picture %}
+                    <img src={{object.picture.url}} height="200"/>
+                    {% endif %}
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="text-right">
+        <a class="btn btn-warning" href="{%  url 'update_profile' %}">Edit Profile</a>
     </div>
-</div>
-{% endblock %}
+{% endblock content %}
