--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,42 +1,28 @@
-{% extends 'index.html' %}
+{% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
+{% block title %}Registre-se{% endblock %}
 
 {% block content %}
-<br>
-<h4>My Profile</h4>
-    <table class="table table-light table-bordered table-striped">
-        <tbody>
-            <tr>
-                <th>First Name</th>
-                <td>{{object.user.first_name}}</td>
-            </tr>
-            <tr>
-                <th>Last Name</th>
-                <td>{{object.user.last_name}}</td>
-            </tr>
-            <tr>
-                <th>Email Id</th>
-                <td>{{object.user.email}}</td>
-            </tr>
-            <tr>
-                <th>Salary</th>
-                <td>{{object.salary}}</td>
-            </tr>
-            <tr>
-                <th>Designation</th>
-                <td>{{object.designation}}</td>
-            </tr>
-            <tr>
-                <th>Profile Picture</th>
-                <td>
-                    {% if object.picture %}
-                    <img src={{object.picture.url}} height="200"/>
-                    {% endif %}
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="text-right">
-        <a class="btn btn-warning" href="{%  url 'update_profile' %}">Edit Profile</a>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <div class="card  auth-card">
+            <div class="card-body">
+                <h4 class="card-title text-center">Registre-se</h4>
+        
+                <form method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ next }}">
+        
+                    {{ form|crispy }}
+
+                    <button type="submit" class="btn btn-primary btn-block">Registrar</button>
+                </form>
+
+                <p class="change-form-p">Já possui uma conta? <a href="/conta/login">Clique aqui!</a></p>
+            </div>
+        </div>
     </div>
-{% endblock content %}
+</div>
+{% endblock %}
