Adicioando chamada a api

--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
               </td>
             </tr>
             <tr>
-              <td><input type="submit" value="Submit" /></td>
+              <td><input type="submit" value="Submit" id="botaoEnvida" /></td>
             </tr>
           </table>
         </form>
@@ -259,6 +259,11 @@
     <script
       type="text/javascript"
       src="{% static 'js/functions.js' %}"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="{% static 'js/chamadaAPI.js' %}"
     ></script>
   </body>
 </html>
