--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,24 +1,45 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Login</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    </head>
-    <body>
-        <form method="POST">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td><label for="username">Nome</label></td>
-                    <td><input type="text" name="username" id="username" required></td>
-                </tr>
-                <tr>
-                    <td><label for="password">Senha</label>
-                    </td>
-                    <td><input type="password" name="password" id="password" required></td>
-                </tr>
-                <p style="color: red;">{{error}}</p>
-            </table>
-            <button type="submit">Entrar</button>
-        </form>
-    </body>
+<head>
+	<title>Login</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="author" content="Paulo Victor">
+	<meta name="description" content="description">
+	<meta name="keywords" content="seguro, assegurado, proteção">
+	<link rel="icon" type="img/svg" href="{% static 'imagens/icon/lock.svg' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+</head>
+<body>
+	<section class="login">
+	<div class="formulario-login text-center">
+		<h3>LOGIN</h3>
+		<form method="POST">
+			{% csrf_token %}
+			<table class="formulario-login text-center">
+				<tr>
+					<td><label for="username">Nome</label></td>
+					<td><input type="text" class="form-control" name="username" id="username" placeholder="Informe seu LOGIN" required></td>
+				</tr>
+				<tr>
+					<td><input type="password" name="password" id="password" required class="form-control"
+							placeholder="Informe sua SENHA"></td>
+				</tr>
+				<tr>
+				<div class="text-right">
+					<td><a href="#">Não possuo cadastro</a></td>
+				</div>
+				<br>
+				<td><button type="submit"><a href="painel.html">Entrar</a></button></td>
+				</tr>
+	</div>
+	</form>
+</section>
+	<!-- ARQUIVOS IMPORTADOS JAVASCRIPT -->
+	<script type="text/javascript" src="{% static 'plugins1/jquery/jquery.js' %}"></script>
+	<script type="text/javascript" src="{% static 'plugins1/bootstrap/js/bootstrap.bundle.js' %}"></script>
+	<script type="text/javascript" src="{% static 'plugins1/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/functions.js' %}"></script>
+</body>
 </html>
